--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
-        <link rel="icon" type="image/x-icon" href="/static/css/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <title>{{ .Title}}</title>
     </head>
